# goit_python_web_hw_11

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
hw11/: main.py
hw11/migrations/: env.py
hw11/src/: shemas.py
hw11/src/database/: db.py  models.py
hw11/src/repository/: contacts.py
hw11/src/routes/: contacts.py
hw11/templates/: index.html
scripts/: docker_build_docker-compose.cmd  docker_run_db.cmd  runserver.cmd  sql_alebic_init.cmd
