[tool.poetry]
name = "goit-python-web-hw-11"
version = "0.1.0"
description = ""
authors = ["lexxai <lexxai@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.4.2"}
alembic = "^1.12.1"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
